objects/WT_Weekly_Metric__c.object
<CustomObject>
    <fields>
        <fullName>WT_Acc_household_Created_Last_Run__c</fullName>
        <label>Number of Househol Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Acc_relationship_grp_Created_Last_Run__c</fullName>
        <label>Number of RelationshipCeated Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Account_Relationship_Groups__c</fullName>
        <label>Number of Relationship Groups Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Accounts_Created_Last_Run__c</fullName>
        <label>Number of Accounts Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Accounts_Created__c</fullName>
        <label>Number of Accounts Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Active_Users_Since_Last_Run__c</fullName>
        <label>Number of Active Users Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Active_Users_With_SF_License_Last_Run__c</fullName>
        <label>No of Active Users-SF License Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Active_Users_With_SF_License__c</fullName>
        <label>Number of Active Users with SF License</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Active_Users__c</fullName>
        <label>Number of Active Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Bus_Acc_Cust_Created_Last_Run__c</fullName>
        <label>Number of Bus Acc Cust Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Bus_Acc_Prosp_Created_Last_Run__c</fullName>
        <label>Number of Bus Acc Prosp Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Business_Account_Customer__c</fullName>
        <label>Number of Business Acc Customer Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Business_Account_Prospect__c</fullName>
        <label>Number of Business Acc Prospect Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Cases_Created_Since_Last_Run__c</fullName>
        <label>Number of Cases Created Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Cases_Created__c</fullName>
        <label>Number of Cases Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Commercial_Action_Plan_Since_Last_Run__c</fullName>
        <label>No of Comm Action Plan Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Commercial_Action_Plans__c</fullName>
        <label>Number of Commercial Action Plans Create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Events_Created_Since_Last_Run__c</fullName>
        <label>Number of Events Created Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Events_Created__c</fullName>
        <label>Number of Events Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Households__c</fullName>
        <label>Number of Households Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Newly_Created_Users_logged_In__c</fullName>
        <label>Number of Newly Created Users logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Opp_Lost_Since_Last_Run__c</fullName>
        <label>Number of Opp Lost Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Other_Activities_Since_Last_Run__c</fullName>
        <label>No of Other Activities Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Other_Activities__c</fullName>
        <label>Number of Other Activities Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Person_Acc_Cust_Created_Last_Run__c</fullName>
        <label>Number of Pers Acc Cust Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Person_Acc_Prosp_Created_Last_Run__c</fullName>
        <label>Number of Per Acc Prosp Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Person_Account_Customer__c</fullName>
        <label>Number of Person Acc Customer Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Person_Account_Prospect__c</fullName>
        <label>Number of Person Acc Propspect Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Phone_Calls_Created__c</fullName>
        <label>Number of Phone Calls Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Phone_Calls_Since_Created_Last_Run__c</fullName>
        <label>Number of Phone Calls Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Ref_Qualified_Converted_Last_Run__c</fullName>
        <label>No of Ref Qualified-Converted Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Created_Since_Last_Run__c</fullName>
        <label>Number of Referrals Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Created__c</fullName>
        <label>Number of Referrals Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_Converted__c</fullName>
        <label>Number of Referrals Qualified-Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified_Since_Last_Run__c</fullName>
        <label>Number of Referrals Qualified Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Referrals_Qualified__c</fullName>
        <label>Number of Referrals Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Retail_Action_Plan_Since_Last_Run__c</fullName>
        <label>No of Retail Action Plan Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Retail_Action_Plans__c</fullName>
        <label>Number of Retail Action Plans Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opp_Created_Since_last_Run__c</fullName>
        <label>Number of Sales Opp Created Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opp_Won_Since_Last_Run__c</fullName>
        <label>Number of Opp Won Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opportunities_Created__c</fullName>
        <label>Number of Sales Opportunities Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opportunities_Lost__c</fullName>
        <label>Number of Sales Opportunities Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Sales_Opportunities_Won__c</fullName>
        <label>Number of Sales Opportunities Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Users_Logged_In_Since_Last_Run__c</fullName>
        <label>Number of Users Logged In Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Users_Logged_In__c</fullName>
        <label>Number of Users Logged In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Walk_Ins_Created_Since_last_Run__c</fullName>
        <label>Number of Walk In Created Since Last Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Walk_Ins_Created__c</fullName>
        <label>Number of Walk Ins Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Metric</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WM-{000000}</displayFormat>
        <label>Weekly Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>